refactor: 파일명 수정

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ find_package(std_msgs REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/JointIdx.msg"
   "msg/JointInfo.msg"
-  "action/Geasture.action"
+  "msg/JointInfoList.msg"
+  "action/Gesture.action"
   DEPENDENCIES std_msgs
 )
 
